--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
     "name": "mutationevnt/multipolls",
+    "description": "A Laravel package to create multi questions polls",
+    "keywords": ["polls", "votes", "laravel", "php"],
     "type": "library",
     "license": "MIT",
     "authors": [
@@ -8,6 +10,12 @@
             "email": "achraf.b@mutationevent.com"
         }
     ],
+    "minimum-stability": "stable",
+    "autoload": {
+        "psr-4": {
+          "Inani\\Larapoll\\": "src/"
+        }
+      },
     "require": {
         "illuminate/support": "~5|~6|~7|~8"
     },
